k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bata-bumi-deployment
  namespace: opm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bata-bumi
  template:
    metadata:
      labels:
        app: bata-bumi
    spec:
      containers:
        - name: bata-bumi
          image: alghaza/bata-bumi-api:latest
          ports:
            - containerPort: 3000
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: DATABASE_URL
        - name: PORT
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: PORT
        - name: JWT_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: JWT_SECRET_KEY
