k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bata-bumi-service
  namespace: opm
spec:
  selector:
    app: bata-bumi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
