k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bata-bumi-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts: 
      - opm.hackathon.sev-2.com
      secretName: opm-tls
  rules:
    - host: opm.hackathon.sev-2.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bata-bumi-service
                port:
                  number: 80
